@@ -1,3 +1,8 @@
+Tue Oct 12  1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSWorkspace.m: Added private notification center class to
+	handle notifications to be passed between applications.
+
 Sat Oct  9  1999  Nicola Pero  <n.pero@mi.flashnet.it>
 	
 	* Source/NSButton.m ([-keyDown:]): Perform a click if  
